<resources>
    <string name="app_name">GIRON</string>
    <string name="title_top">Giron</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_mypage">MyPage</string>
    <string name="main_channel">main channel</string>
    <string name="main_channel_description">Basic notification.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="last_comment_up_button">UP!!</string>
    <string name="failed_sign_up">Can not login</string>
    <string name="no_comment">Be sure to enter a comment.</string>
    <string name="get_certification">Get authentication information.</string>
    <string name="now_login">You are logged in...</string>
    <string name="giron_title">Title</string>
    <string name="giron_value">Value</string>
    <string name="tag">Tag</string>
    <string name="get_all_comment">Show %d  omitted comments</string>
    <string name="get_new_comment">Updating and getting new comments</string>
    <string name="reword">Reword</string>
    <string name="make_giron">GIRON Creating</string>
    <string name="get_before_comment">Get previous comments</string>
    <string name="get_after_comment">Get subsequent comments</string>
    <string name="get_omitted_comment">Display omitted comments</string>
    <string name="add_response_comment">Reply</string>
    <string name="report">Report this comment</string>
    <string name="block_user">Block this user</string>
    <string name="block_user_detail">This user has been blocked.The comment and GIRON of the blocked user are hidden.You can continue to receive likes and rewards from blocked users. Unblocking can be done from My Page Settings.</string>
    <string name="cancel_block_user_detail">User unblocked.</string>
    <string name="name">Name</string>
    <string name="profile_detail">Profile detail</string>
    <string name="change_user_image">Change\nimage</string>
    <string name="profile">Prof</string>
    <string name="my_profile">profile confimation</string>
    <string name="emotion">LIKE</string>
    <string name="edit_profile_buttom_label">Edit Profile</string>
    <string name="eula">Terms of service</string>
    <string name="payed_coin">Paid item</string>
    <string name="agree_eula_and_start">Agree to the terms of service and start</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="contact">Contact</string>
    <string name="block_user_list">Blocked list</string>
    <string name="block_release">Unlock</string>
    <string name="get_new_girons">Display a new GIRON</string>
    <string name="error">Error</string>
    <string name="check_eula">Checking for updated terms of service</string>
    <string name="error_ocuccered">An error has occurred. Please try again later.</string>
    <string name="error_version">Download the latest version. Open the App Store.</string>
    <string name="error_version_title">The version is out of date</string>
    <string name="checking_app_version">Checking version</string>
    <string name="purchase_coin">Coin purchase</string>
    <string name="reworded_history">Received coin history</string>
    <string name="reword_history">Rewarded coin history</string>
    <string name="advertisement_history">Advertisement Coin History</string>
    <string name="purchase_attention_buttom_label">Paid points will not expire</string>
    <string name="limit_coin_month">Points that will expire on: </string>
    <string name="specified_commercial_transaction_law">Transactions Act</string>
    <string name="fund_settlement_raw">Fund Settlement</string>
    <string name="information">Infomation</string>
    <string name="search_default_title">There was no corresponding\nsearch result.</string>
    <string name="search_default">Try changing the search word.\n # starts with a keyword search.</string>
    <string name="myreference_giron_default_title">There were no relevant\n results for you.</string>
    <string name="myreference_giron_default">Check out the GIRON you are interested in,\n comment on it, like it,\n and send a reward!</string>
    <string name="notice">Notice</string>
    <string name="notice_default_title">No notification</string>
    <string name="notice_default">We do not have addressed your notification \n Let\'s participate in GIRON!</string>
    <string name="reworded_default_title">No reward history</string>
    <string name="reworded_default">There are no rewards for you yet. \n Let\'s join GIRON!</string>
    <string name="reword_default_title">No reward history</string>
    <string name="reword_default">There are no rewards for you yet. \n Let\'s join GIRON!</string>
    <string name="update_profile">Profile updated</string>
    <string name="check_transaction_payment">Now processing...</string>
    <string name="check_payment_list">Querying server for payment information...</string>
    <string name="finishing_transaction">ow processing...</string>
    <string name="cancel_transaction">The purchase process was canceled</string>
    <string name="coin_by_pay">You purchased by app billing.</string>
    <string name="coin_no_user">Sent by the administration</string>
    <string name="coin_for_request">Request royality</string>
    <string name="searchbar_placeholder">Find a GIRON of interest</string>
    <string name="new_giron_list_btn">NEW</string>
    <string name="update_giron_list_btn">UPDATE</string>
    <string name="mygiron_giron_list_btn">RELATED</string>
    <string name="top_giron_list_btn">TOP</string>
    <string name="tag_is_error">Invalid tag name. The tag cannot contain numbers at the beginning. It cannot contain spaces.</string>
    <string name="tagcount_is_over">No more tags can be added</string>
    <string name="send">Send</string>
    <string name="tag_edit">Edit Tag</string>
    <string name="add_tag">＋ Add Tag</string>
    <string name="all_search">Search all GIRON</string>
    <string name="search_history">Search history</string>
    <string name="popular_word">Popular search word</string>
    <string name="create_tag_history">Add from recently added tags</string>
    <string name="edit_tag">Edit Tag</string>
    <string name="create_by_hot_tag">Add from frequently used tags</string>
    <string name="edit_tag_text_label">Add new Tag</string>
    <string name="alert_editing">Editing is in progress. Are you sure you want to lose the changed data?</string>
    <string name="parchase_destination">G coins purchased with the GIRON app can only be used with this app. Minor GIRON users need parental consent to purchase G coins.</string>
    <string name="no_tag">Tag is not registered. Do you want to add a tag?</string>
    <string name="users_profile">\'s Profile</string>
    <string name="comment_placeholder">Let\'s GIRON!!</string>
    <string name="giron_title_placeholder">Input GIRON\'s title</string>
    <string name="giron_value_placeholder">What\'s problem?</string>
    <string name="input_tag">Input Tag</string>
    <string name="official_tag">Official Tag</string>
    <string name="recommend_tag">Recommend Tag</string>
    <string name="error_message">An error has occurred.</string>
    <string name="error_and_contact">An error has occurred. Please contact support</string>
    <string name="input_user_name">Input name</string>
    <string name="user_profile_placeholder">Nice to meet you</string>
    <string name="second_ago">second ago</string>
    <string name="minutes_ago">minutes ago</string>
    <string name="hours_ago">hours ago</string>
    <string name="notice_reword_giron"> rewored %d coins for your comment.</string>
    <string name="notice_reword_comment"> rewored %d coins for your GIRON.</string>
    <string name="notice_liked_giron"> liked your GIRON.</string>
    <string name="notice_liked_comment"> liked your comment.</string>
    <string name="notice_comment"> commented.</string>
    <string name="make_giron_button">GIRON!</string>
    <string name="loyalty_use_gcoin">is consumed</string>
    <string name="loyalty_request">Royalty</string>
    <string name="request">Submit</string>
    <string name="request_dialog_title">Request</string>
    <string name="request_dialog">Consume {0} coins and apply for loyality? This request cannot be canceled.</string>
    <string name="request_title">Royalty</string>
    <string name="success_request">Your application accepted. Please wait.</string>
    <string name="loyalty_request_history">Royalty history</string>
    <string name="loyalty_request_history_default_title">No transfer history</string>
    <string name="history_loyalty_request_default">There are no request yet.\nLet\'s join GIRON and get reword.</string>
    <string name="loyalty_request_history_title">Royalty history</string>
    <string name="loyalty_request_state_none">Waiting</string>
    <string name="loyalty_request_state_ok">Accepted</string>
    <string name="loyalty_request_state_cancel">Canceled</string>
    <string name="yesterday">yesterday</string>
    <string name="commented">Commented</string>
    <string name="report_giron">Report this GIRON</string>
    <string name="share_giron">Share this GIRON</string>
    <string name="reported_giron">You have reported this GIRON.</string>
    <string name="reported_comment">You have reported this comment.</string>
    <string name="confirm_reword_to_comment">Do you reword to this comment?</string>
    <string name="copy_clipboard">Copy comment to clipboard.</string>
    <string name="request_by_amazon">Request Amazon Gift Code.</string>
    <string name="request_by_amazon_1">1. The Amazon Gift Code will be emailed to the Gmail account used to login. Be sure to be able to receive mail.</string>
    <string name="request_by_amazon_2">2. It takes time to reflect the application. Scheduled for late next month.</string>
    <string name="request_by_amazon_3">3. Amazon Gift Code are currently only available in Japan. In the future, we plan to respond outside the country.</string>
    <string name="about_loyalty">About GIRON Loyalty</string>
    <string name="advertisement_permission">Allow ads</string>
    <string name="advertisement_default_title">No history</string>
    <string name="advertisement_default">You can get G-Coin by browsing the advertisement. \nYou can check the setting of the advertisement from \'Allow ads\' of Setting.</string>
    <string name="no_mygiron_title">No GIRON created</string>
    <string name="no_mygiron">Post your assignments to GIRON and exchange opinions with various people!</string>
    <string name="copy_giron">Copy the contents of this GIRON</string>
    <string name="get_url_giron">Copy the contents of this GIRON</string>
    <string name="copied_clipboard">Copied to clipboard</string>
    <string name="no_request_history_title">No loyalty history</string>
    <string name="no_request_history_value">Let\'s post or comment on GIRON!</string>
    <string name="loyalty_summary">What\'s GIRON Loyalty?</string>
    <string name="loyalty_message_1">・The GIRON Loyalty is a service that can convert G-Coin into various gift certificates. Currently, only Amazon gift certificates are supported.</string>
    <string name="request_loyalty_email">Request Gift Code.</string>
    <string name="loyalty_type_all">Corresponding Gift Code</string>
    <string name="amazon">Amazonギフト券</string>
    <string name="quo">QUOカードPay</string>
    <string name="request_by_amazon_message_1">・You will receive an invitation email to redeem your Amazon Gift Code. Be sure to be able to receive mail.</string>
    <string name="mail_coin_permission">Receive coin E-mail</string>
    <string name="mail_magazine_permission">Receive E-mail newsletter</string>
    <string name="mail_campaign_permission">Receive campaign E-mail</string>
    <string name="unsubscribe">Withdraw from GIRON</string>
    <string name="advertisement_footer">Ads can be canceled by setting</string>
</resources>