<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="user"
            type="com.giron.android.view.setting.viewModel.SettingViewModel" />
        <import type="android.view.View"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/adsSwitch"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/advertisement_permission"
                    android:textColor="@color/text" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/coinMailSwitch"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/mail_coin_permission"
                    android:textColor="@color/text" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/magazineMailSwitch"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/mail_magazine_permission"
                    android:textColor="@color/text" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/campaignMailSwitch"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/mail_campaign_permission"
                    android:textColor="@color/text" />

            </LinearLayout>

            <TextView
                android:id="@+id/contact"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:text="@string/contact"
                android:textColor="@color/text" />

            <TextView
                android:id="@+id/eula"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:text="@string/eula"
                android:textColor="@color/text" />

            <TextView
                android:id="@+id/privacyPolicy"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:text="@string/privacy_policy"
                android:textColor="@color/text" />

            <TextView
                android:id="@+id/unsubscribe"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:text="@string/unsubscribe"
                android:textColor="@android:color/holo_red_dark" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>