<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="user"
            type="com.giron.android.view.editProfile.viewModel.EditProfileViewModel" />
        <import type="android.view.View"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <View
                android:layout_width="24dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/name_label"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:gravity="left|center_vertical"
                android:text="@string/name"
                android:textColor="@color/gray"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="RtlHardcoded" />

            <View
                android:layout_width="16dp"
                android:layout_height="wrap_content" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/input_user_name"
                android:importantForAutofill="no"
                android:text="@={user.username}"
                android:textColor="@color/gray"
                android:textSize="16sp"
                android:background="@color/BaseBackColor"
                tools:ignore="LabelFor" />

            <View
                android:layout_width="16dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="@color/lightGray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <View
                android:layout_width="24dp"
                android:layout_height="wrap_content" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="60dp"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/profile_label"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="left|center_vertical"
                    android:text="@string/profile"
                    android:textColor="@color/gray"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="RtlHardcoded" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:layout_width="16dp"
                android:layout_height="wrap_content" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="14dp"
                android:layout_weight="1"
                android:background="@color/BaseBackColor"
                android:ems="10"
                android:gravity="top|left"
                android:hint="@string/user_profile_placeholder"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:text="@={user.profile}"
                android:textColor="@color/gray"
                android:textSize="16sp"
                tools:ignore="LabelFor,RtlHardcoded" />

            <View
                android:layout_width="16dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>

</layout>